--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ body{
 
 /* header */
 #header{
-    background: url(../images/banner-img-1.jpg) top/cover no-repeat;
+    background: url(../images/2505_Setupgcgaming3.jpg) top/cover no-repeat;
 }
 .carousel-inner h1{
     font-size: 60px;
@@ -118,7 +118,7 @@ body{
 
 /* offers */
 #offers{
-    background: url(../images/offer_img.jpg) center/cover no-repeat;
+    background: url(../images/offer_img1.jpg) center/cover no-repeat;
 }
 #offers .row{
     min-height: 60vh;
